plugins {
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'java'
    id 'maven-publish'
}

ext {
    baseName = 'domiot-webservice'
    classifier = 'SNAPSHOT'
    mainClassName = 'org.domiot.webservice.WebService'
}

repositories {
    mavenLocal()
    mavenCentral()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId 'org.domiot'
            artifactId 'domiot-webservice'
            version version

            from components.java
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 23
}

jacoco {
    toolVersion = "0.8.13"
    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // report is always generated after tests run
}

bootJar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

dependencies {
    implementation("org.domiot:domiot-datatypes:0.10.0-SNAPSHOT")
    implementation("org.domiot:domiot-rest-api:1.4.0-SNAPSHOT")

    implementation("org.springframework.boot:spring-boot-starter-webflux")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-actuator")
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6")
    implementation("org.mariadb.jdbc:mariadb-java-client:3.5.8")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-hibernate6:2.21.2")
    implementation("com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations:2.21.2")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.21.2")
    implementation("com.fasterxml:classmate:1.7.0")
    implementation("org.mapstruct:mapstruct:1.6.3")
    implementation("org.projectlombok:lombok-mapstruct-binding:0.2.0")
    implementation("jakarta.xml.bind:jakarta.xml.bind-api:4.0.5")

    annotationProcessor("org.projectlombok:lombok:1.18.44")
    annotationProcessor("org.mapstruct:mapstruct-processor:1.6.3")

    compileOnly("org.projectlombok:lombok:1.18.44")

    testImplementation("org.junit.jupiter:junit-jupiter:6.0.3")
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.mockito:mockito-junit-jupiter:5.11.0")
    testImplementation("org.junit.platform:junit-platform-runner:1.14.3")
    testImplementation("org.hamcrest:hamcrest:3.0")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.44")
    testAnnotationProcessor("org.mapstruct:mapstruct-processor:1.6.3")
}
